# OpenGL

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
ShaderRED/FXAA/: fxaa_case.sprj
ShaderRED/FXAA/shaders/: fxaa_case_SimplePS.glsl
TODO/: TODO.md
example/: CMakeLists.txt
example/CSM/: CSM.cpp  CSMLayer.cpp  CSMLayer.h
example/FXAA/: CMakeLists.txt  main.cpp  processInput.h
example/FXAA/Shaders/: FXAA_FS_drawCube.glsl  FXAA_FS_quad.glsl  FXAA_VS_drawCube.glsl  FXAA_VS_quad.glsl
example/OIT/: CMakeLists.txt
example/OIT/DepthPeeling/: CMakeLists.txt  main.cpp
example/OIT/DepthPeeling/DualDepthPeeling/: CMakeLists.txt  DualDepthPeeling.cpp  DualDepthPeelingApp.cpp  DualDepthPeelingLayer.cpp  DualDepthPeelingLayer.h
example/OIT/DepthPeeling/DualDepthPeeling/Shaders/: dualBlend.frag
example/OIT/WeightedAveraging/: CMakeLists.txt
example/OIT/WeightedAveraging_1st/: CMakeLists.txt  main.cpp
example/OIT/WeightedAveraging_2st/: CMakeLists.txt  main.cpp
example/OIT/WeightedSum/: CMakeLists.txt  main.cpp
example/SomeCases/: CMakeLists.txt
example/antialiasing/: CMakeLists.txt
example/antialiasing/MSAA/: CMakeLists.txt  main.cpp
example/antialiasing/MSAA/Shaders/: MSAA_triangle.vert  triangle.frag  triangle_withTexture.frag  triangle_withTexture.vert
examples/: CMakeLists.txt
examples/CSM/: CMakeLists.txt  CSMLayer.cpp  CsmApp.cpp
examples/OIT/: CMakeLists.txt
examples/OIT/ABuffer/: ABufferApp.cpp  ABufferLayer.cpp  ABufferLayer.h  CMakeLists.txt  README.md
examples/OIT/ABuffer/Shaders/: ABuffer_clearAbuffer.frag  ABuffer_triangle.frag  ABuffer_triangle.vert  DisplayABuffer.frag
examples/OIT/WeightedBlend/WeightedAveraging/WeightedAveraging_1st/: CMakeLists.txt  main.cpp
examples/otherCase/: CMakeLists.txt
src/: CMakeLists.txt  pointer_ptr.hpp
src/Platform/: WindowBase.h  WindowsWindow.cpp  WindowsWindow.h
src/Render/: Buffer.cpp  Buffer.h  Enum.h  FrameBuffer.cpp  FrameBuffer.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/Render/OpenGL/: OpenGLBuffer.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
src/RenderBase/: pointer_ptr.hpp
src/RenderBase/Camera/: CameraFunc.cpp  CameraFunc.h
src/RenderBase/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  OGLBase.h  Timestep.h  Window.h
src/RenderBase/Event/: ApplicationEvent.h  Event.h
src/RenderBase/Geometry/: BoundingBox.cpp  BoundingBox.h  GeometryObject.cpp  GeometryObject.h  Object.cpp  Object.h
src/RenderBase/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
src/RenderBase/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLShaderStorageBuffer.cpp  OpenGLShaderStorageBuffer.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
src/RenderBase/Render/: Buffer.cpp  Buffer.h  Context.h  Enum.h  FrameBuffer.cpp  FrameBuffer.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
src/RenderBase/ToolFunc/: OpenGLDebugger.cpp  OpenGLDebugger.h
(+98 files in other folders)
