SET(target DualDepthPeeling)

find_package(glfW3 CONFIG REQUIRED)
find_package(glad CONFIG REQUIRED)
find_package(glm CONFIG REQUIRED)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)

FILE(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.H)

ADD_EXECUTABLE(${target} ${SOURCES})

TARGET_LINK_LIBRARIES(${target} PRIVATE glfw glad::glad OpenGLBase)
TARGET_LINK_DIRECTORIES(${target} PRIVATE ${CMAKE_SOURCE_DIR}/src)

FILE(INSTALL Shaders DESTINATION ${CMAKE_BINARY_DIR}/bin)









